[project]
name = "noza"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentin",email = "valentin@esteka-data.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.52.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "imagehash (>=4.3.2,<5.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "google-auth (>=2.43.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
