[tool.poetry]
name = "noza"
version = "0.1.0"
description = "Mon application Streamlit"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.52.1"
# ... autres dépendances ...

[tool.poetry] # <--- Créez ou modifiez cette section
package-mode = false # <--- AJOUTEZ CETTE LIGNE