[tool.poetry]
name = "noza"
version = "0.1.0"
description = "Mon application Streamlit"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false # <--- La ligne package-mode doit être ici

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.52.1"
# ... autres dépendances ...

# [tool.poetry] # <--- Si vous avez ajouté une deuxième section comme celle-ci, SUPPRIMEZ-LA.
# package-mode = false
beautifulsoup4 = "^4.14.3"
